edited CSS to fix break in About page layout

--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -66,6 +66,7 @@
 	left: 43.5%;
 	top: 10px;
 	padding: 5px;
+	clear: both;
 }
 
 .social a {
@@ -74,6 +75,7 @@
 .attributes {
 	font-size: 10px;
 	text-align: right;
+	clear: right;
 }
 
 .about {
@@ -102,6 +104,7 @@
 	display: inline-block;
 	float: right;
 	clear: both;
+	margin-left: 30px;
 }
 
 .contact {
